@@ -1,19 +1,21 @@
+---
 en:
   administrate:
     actions:
-      show: Show
-      edit: Edit
-      destroy: Destroy
       confirm: Are you sure?
-    fields:
-      has_many:
-        none: None
-      polymorphic:
-        not_supported: "Polymorphic relationship forms are not supported yet. Sorry!"
+      destroy: Destroy
+      edit: Edit
+      show: Show
     controller:
       create:
         success: "%{resource} was successfully created."
-      update:
-        success: "%{resource} was successfully updated."
       destroy:
         success: "%{resource} was successfully destroyed."
+      update:
+        success: "%{resource} was successfully updated."
+    fields:
+      has_many:
+        more: Showing %{count} of %{total_count}
+        none: None
+      polymorphic:
+        not_supported: Polymorphic relationship forms are not supported yet. Sorry!
